<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.SettingsFragment" >


    <android.support.v7.widget.AppCompatImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:id="@+id/avatar"
        app:srcCompat="@drawable/ic_person_black_24dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_margin="16dp"
        android:id="@+id/parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:layout_centerVertical="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            style="@style/profile_icon"
            android:id="@+id/emailIcon"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:focusable="false"
            android:hint="@string/email"
            style="@style/login_text" />

    </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/fnameIcon"
                app:srcCompat="@drawable/ic_account_box_black_24dp"
                style="@style/profile_icon" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/fname"
                android:inputType="text"
                android:focusable="false"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:hint="@string/fname"
                style="@style/login_text" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/lnameIcon"
                app:srcCompat="@drawable/ic_account_box_black_24dp"
                style="@style/profile_icon" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/lname"
                android:inputType="text"
                android:singleLine="true"
                android:focusable="false"
                android:imeOptions="actionNext"
                android:hint="@string/lname"
                style="@style/login_text" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_red"
            android:layout_marginTop="32dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/login_btn"
                android:text="@string/logout"
                android:id="@+id/logout" />





        </RelativeLayout>

    </LinearLayout>




    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_edit_black_24dp"
        android:tint="@color/colorIcons"/>



</RelativeLayout>
