<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="16dp"
    android:background="@color/colorPrimary2">



    <io.supercharge.shimmerlayout.ShimmerLayout
        android:layout_alignParentTop="true"
        android:layout_above="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:shimmer_animation_duration="5000"
        app:shimmer_auto_start="true"
        app:shimmer_color="@color/colorPrimaryLight"
        app:shimmer_reverse_animation="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="128dp"
                app:srcCompat="@drawable/logo1"
                android:id="@+id/logo"
                android:layout_centerInParent="true"
                android:layout_marginTop="32dp"/>


        </RelativeLayout>



    </io.supercharge.shimmerlayout.ShimmerLayout>





    <LinearLayout
        android:id="@+id/parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:layout_centerVertical="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                style="@style/login_icon"
                android:id="@+id/emailIcon"
                app:srcCompat="@drawable/ic_email_black_24dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:hint="@string/email"
                style="@style/login_text" />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/passwordIcon"
                app:srcCompat="@drawable/ic_lock_black_24dp"
                style="@style/login_icon" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                style="@style/login_text" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginTop="32dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/login_btn"
                android:text="@string/login"
                android:id="@+id/login" />





        </RelativeLayout>


        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressBar"
            android:visibility="invisible"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorDivider" />




    </LinearLayout>



    <android.support.v7.widget.AppCompatTextView
        android:text="@string/register"
        android:layout_marginTop="16dp"
        style="@style/login_btn"
        android:id="@+id/register"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>